--- a/Views/ExcelReader/SheetsDrop.cshtml
+++ b/Views/ExcelReader/SheetsDrop.cshtml
@@ -10,6 +10,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <title>SheetsDrop</title>
 </head>
 <body>
