--- a/Views/ExcelReader/SheetsDrop.cshtml
+++ b/Views/ExcelReader/SheetsDrop.cshtml
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body>
+    <p id="status" ></p>
     <div class="col-md-3 dropdowns" style="margin-top:10px">
         <label style="margin-top:20px;">
             <b>
@@ -28,6 +29,7 @@
         @Html.DropDownList("sheet", new SelectList(ViewBag.Selectlist, "Value", "Text"), "<select>", new { @class = "form-control", @id = "Sheets", onchange = "Tablechange()" })
 
     </div>
+    
     <div>
         <table class="table table-bordered" id="tableData">
             <thead>
@@ -43,20 +45,19 @@
         </table>
     </div>
 
-    <input type="submit" value="Next" onclick="showTableData()" class="btn-success form-control" style="margin-right:1220px;" />
+    <input type="submit" value="Next" id="SubmitButton"  onclick="showTableData()" class="btn-success form-control" style="margin-right:1220px;" />
 
-
+    
 
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
-   function Tablechange() {
+    var selectedSheet;
+    function Tablechange() {
         var selectedSheet = $('#Sheets').val();
-
         var Dt = JSON.parse(selectedSheet);
         var FieledList = @Html.Raw(Json.Encode(ViewBag.fields));
-
 
         $("#table").empty();
         for (let key in Dt[0]) {
@@ -76,7 +77,7 @@
     function DropDownValue(changed) {
         $('.disabled').removeClass('disabled');
         var val = $(changed).val();
-        console.log(val);
+        
         var list = $('.list');
         var seletlist = [];
         for (let i = 0; i < list.length; i++) {
@@ -85,7 +86,7 @@
                 seletlist[seletlist.length] = val;
             }
         }
-        console.log(seletlist);
+      
         for (let i = 0; i < list.length; i++) {
             for (let j = 0; j < seletlist.length; j++) {
                 var val = $(list[i]).val();
@@ -99,6 +100,7 @@
                 }
             }
         }
+
     }
 
 
@@ -114,21 +116,24 @@
             if ($(objCells.item(1).firstChild).val() != "0") {
                 var key = (objCells.item(0).innerHTML);
                 exportData[key] = $(objCells.item(1).firstChild).val();
-                
-
-                //console.log(obj);
-                //exportData.push(obj);
+               
             }
         }
-        console.log(exportData);
-
+        console.log(exportData);     
         var myDictionary = exportData;
-        $.ajax({
-            type: "POST",
-            url:'@Url.Action("createExcel", "ExcelReader")',
-            data: { "myDictionary": myDictionary },
-            success: function (data) {
+        //var selectedSheet = document.getElementById("Sheets");
+        var SheetName = $("#Sheets").find("option:selected").text();
 
+        $.ajax({
+           type: "POST",
+            url: '@Url.Action("createExcel", "ExcelReader")',
+            data: { "FList": myDictionary, "SheetName": SheetName },
+
+            
+            success: function (data) {
+                alert(data);
+                $("#status").html = data;
+               
             }
            
         });
