--- a/Views/ExcelReader/ReadExcelFile.cshtml
+++ b/Views/ExcelReader/ReadExcelFile.cshtml
@@ -1,4 +1,10 @@
-﻿@if (IsPost)
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+}
+
+
+@if (IsPost)
 {
     <script>
         alert('@ViewBag.message');
@@ -14,11 +20,11 @@
             console.log(x);
             $('#ex').html(x[2]);
         }
-   /*     if (b != '') {
-            var x = b.split('\\');
-            console.log(x);
-            $('#zp').html(x[2]);
-        }*/
+        /*     if (b != '') {
+                 var x = b.split('\\');
+                 console.log(x);
+                 $('#zp').html(x[2]);
+             }*/
         if (($('input[name$="Excel"]').val() == '') || ($('#org').val() == 0) || ($('#proj').val() == 0)) {
             document.getElementById("submit").disabled = true;
 
@@ -29,14 +35,14 @@
 </script>
 @using (Html.BeginForm("ReadExcelFile", "ExcelReader", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <div class="form-row">
-        <label id="ex" class="btn btn-success" for="Excel">Choose Excel</label>
-        <input id="Excel" type="file" name="Excel" data-max-size="321540" accept=".xls,.xlsx" style="display:none" onchange="check()" />
-    </div>
-    <br />
-    <br />
-    <div>
-        <button id="submit" class="btn btn-dark">Submit</button>
+    <div style="margin-left:300px;margin-top:50px;">
+        <div class="form-row">
+            <label id="ex" class="btn btn-success" for="Excel">Choose Excel</label>
+            <input id="Excel" type="file" name="Excel" data-max-size="321540" accept=".xls,.xlsx" style="display:none" onchange="check()" />
+        </div>
+        <div class="btn btn-dark">
+            <button id="submit" class="btn btn-dark">Submit</button>
+        </div>
     </div>
 }
 
