--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,40 +3,275 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    @*<title>@ViewBag.Title - My ASP.NET Application</title>*@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="~/Content/Site.css" rel="stylesheet" />
+
+    @*<link href="~/Content/Site.css" rel="stylesheet" />*@
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+    <script src="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700"></script>
+
+    <meta charset="UTF-8">
+    <title>WorkItem Migrator</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <script src="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"></script>
+    <link rel="stylesheet" href="~/vendor/bootstrap/css/bootstrap.min.css">
+    <!-- Font Awesome CSS-->
+    <link rel="stylesheet" href="~/vendor/font-awesome/css/font-awesome.min.css">
+    <!-- Fontastic Custom icon font-->
+    <link rel="stylesheet" href="~/css/fontastic.css">
+    <!-- Google fonts - Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <!-- jQuery Circle-->
+    <link rel="stylesheet" href="~/css/grasp_mobile_progress_circle-1.0.0.min.css">
+    <!-- Custom Scrollbar-->
+    <link rel="stylesheet" href="~/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <!-- theme stylesheet-->
+    <link rel="stylesheet" href="~/css/style.sea.css" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="~/css/custom.css">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="~/img/assets/logoicon.png">
+
+
+    <style>
+
+        .navbar-header {
+            color: #fff;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            list-style: none;
+            text-decoration: none;
+            font-family: 'Josefin Sans', sans-serif;
+        }
+
+        body {
+            background-color: #f3f5f9;
+        }
+
+        .wrapper {
+            display: flex;
+            position: relative;
+        }
+
+            .wrapper .sidebar {
+                width: 200px;
+                height: 92%;
+                background: #4b4276;
+                padding: 30px 0px;
+                position: fixed;
+            }
+
+                .wrapper .sidebar h2 {
+                    color: #fff;
+                    text-transform: uppercase;
+                    text-align: center;
+                    margin-bottom: 30px;
+                }
+
+                .wrapper .sidebar ul li {
+                    padding: 15px;
+                    border-bottom: 1px solid #bdb8d7;
+                    border-bottom: 1px solid rgba(0,0,0,0.05);
+                    border-top: 1px solid rgba(255,255,255,0.05);
+                }
+
+                    .wrapper .sidebar ul li a {
+                        color: #bdb8d7;
+                        display: block;
+                    }
+
+                        .wrapper .sidebar ul li a .fas {
+                            width: 25px;
+                        }
+
+                    .wrapper .sidebar ul li:hover {
+                        background-color: #594f8d;
+                    }
+
+                        .wrapper .sidebar ul li:hover a {
+                            color: #fff;
+                        }
+
+                .wrapper .sidebar .social_media {
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    display: flex;
+                }
+
+                    .wrapper .sidebar .social_media a {
+                        display: block;
+                        width: 40px;
+                        background: #594f8d;
+                        height: 40px;
+                        line-height: 45px;
+                        text-align: center;
+                        margin: 0 5px;
+                        color: #bdb8d7;
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                    }
+
+            .wrapper .main_content {
+                width: 100%;
+                margin-left: 200px;
+            }
+
+                .wrapper .main_content .header {
+                    padding: 20px;
+                    background: #fff;
+                    color: #717171;
+                    border-bottom: 1px solid #e0e4e8;
+                }
+
+                .wrapper .main_content .info {
+                    margin: 20px;
+                    color: #717171;
+                    line-height: 25px;
+                }
+
+                    .wrapper .main_content .info div {
+                        margin-bottom: 20px;
+                    }
+    </style>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("WorkItem Migrator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:#4b4276;">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Canarys", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    
+    </header>
+    <nav>
+        <div class="wrapper">
+            <div class="sidebar">
+                <h2>Migrator</h2>
+                <ul>
+                    <li><a href="../Welcome/Welcomepage"><i class="fas fa-home"></i>Welcome</a></li>
+                    <li><a href="#"><i class="fas fa-user"></i>Data Source</a></li>
+                    <li><a href="#"><i class="fas fa-address-card"></i>Field Mapping</a></li>
+                    <li><a href="#"><i class="fas fa-project-diagram"></i>Data Mapping</a></li>
+                    <li><a href="#"><i class="fas fa-blog"></i>Links Mapping</a></li>
+                    <li><a href="#"><i class="fas fa-address-book"></i>Miscellaneous</a></li>
+                    <li><a href="#"><i class="fas fa-map-pin"></i>Confirm</a></li>
+                </ul>
+                <div class="social_media">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+    </div>
+
+    <div>
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            @*<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>*@
         </footer>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("WorkItem Migrator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                    </ul>
+                </div>
+            </div>
+        </div>*@
+
+
+    @*<div class="container body-content">
+
+
+
+        </div>*@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <script src="~/vendor/popper.js/umd/popper.min.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
+    <script src="~/vendor/jquery.cookie/jquery.cookie.js"></script>
+    <script src="~/vendor/chart.js/Chart.min.js"></script>
+    <script src="~/vendor/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <!-- Main File-->
+    <script src="~/js/front.js"></script>
+    <script src="~/Scripts/datatables.min.js"></script>
+    <link href="~/Content/datatables.min.css" rel="stylesheet" />
 </body>
 </html>
