--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -181,10 +181,10 @@
                     <li><a href="../Welcome/Welcomepage"><i class="fas fa-home"></i>Welcome</a></li>
                     <li><a href="#"><i class="fas fa-user"></i>Data Source</a></li>
                     <li><a href="#"><i class="fas fa-address-card"></i>Field Mapping</a></li>
-                    <li><a href="#"><i class="fas fa-project-diagram"></i>Data Mapping</a></li>
+                    @*<li><a href="#"><i class="fas fa-project-diagram"></i>Data Mapping</a></li>
                     <li><a href="#"><i class="fas fa-blog"></i>Links Mapping</a></li>
                     <li><a href="#"><i class="fas fa-address-book"></i>Miscellaneous</a></li>
-                    <li><a href="#"><i class="fas fa-map-pin"></i>Confirm</a></li>
+                    <li><a href="#"><i class="fas fa-map-pin"></i>Confirm</a></li>*@
                 </ul>
                 <div class="social_media">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -195,7 +195,7 @@
         </div>
     </nav>
 
-    <div class="container body-content">
+    <div class="container body-content" style="margin-left:100px;">
         @RenderBody()
     </div>
 
