--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 <body>
     <header>
         <div class="navbar navbar-inverse navbar-fixed-top fixed-top" style="background-color:#4b4276;height:30px;">
-            @Html.ActionLink("Canarys", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Canarys", "Index", "Home", new { area = "" }, new { @class = "    " })
             <div class="container">
 
                 @*<div class="navbar-header">
@@ -101,35 +101,6 @@
         </footer>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     @*<div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -149,8 +120,6 @@
 
 
     @*<div class="container body-content">
-
-
 
         </div>*@
 
