--- a/Views/Welcome/Welcomepage.cshtml
+++ b/Views/Welcome/Welcomepage.cshtml
@@ -22,6 +22,6 @@
         <p>Check that your MS Office(Excel/Word) is version 2003 or greater.</p>
     </div>
     <div>
-        <input type="button" value="Next" class="btn btn-info" onclick="location.href='@Url.Action("ReadExcelFile", "ExcelReader")'"/>
+        <input type="button" value="Next" class="btn btn-info" onclick="location.href='@Url.Action("Validation","ExcelReader")'"/>
     </div>
 </div>
