--- a/Views/ExcelReader/SheetsDrop.cshtml
+++ b/Views/ExcelReader/SheetsDrop.cshtml
@@ -4,6 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
+<style>
+    .disabled{
+        display:none;
+    }
+</style>
+
     <script>
     var selectedSheet;
     function Tablechange() {
